@@ -2,7 +2,7 @@
    
    ie.css
    
-   Contains every hack for IE6 & 7, 
+   Contains every hack for Internet Explorer,
    so that our core files stay sweet and nimble.
    
 -------------------------------------------------------------- */
